fixed ui issues

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 	<body
 		data-sveltekit-preload-data="hover"
 		data-theme="main-theme"
-		class="min-h-[100vh] px-4 py-2"
+		class="flex min-h-[100vh] flex-col px-4 py-2"
 	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
