--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark bg-[var(--color-surface-900)]">
+<html lang="en" class="dark bg-surface-900">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -9,7 +9,7 @@
 	<body
 		data-sveltekit-preload-data="hover"
 		data-theme="main-theme"
-		class="flex min-h-[100vh] flex-col px-4 py-2"
+		class="flex min-h-screen flex-col px-4 py-2"
 	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
